--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -115,3 +115,13 @@ rules:
   - list
   - update
   - watch
+- apiGroups:
+  - policy
+  resources:
+  - poddisruptionbudgets
+  verbs:
+  - delete
+  - get
+  - list
+  - update
+  - watch
