--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -207,10 +207,10 @@ spec:
               enablePodDisruptionBudget:
                 description: "EnablePodDisruptionBudget defines whether a PodDisruptionBudget
                   should be attached to Nginx or not. Defaults to disabled. \n If
-                  enabled, PDB's min available is calculated as: - rpaasinstance.spec.autoscale.minReplicas
-                  (if set and less than maxReplicas); - rpaasinstance.spec.autoscale.maxReplicas
-                  - 1 (if set); - rpaasinstance.spec.replicas - 1 (if set); - zero,
-                  otherwise."
+                  enabled, PDB's min available is calculated as:  minAvailable = floor(N
+                  * 90%), where  N:   - rpaasinstance.spec.autoscale.minReplicas (if
+                  set and less than maxReplicas);   - rpaasinstance.spec.autoscale.maxReplicas
+                  (if set);   - rpaasinstance.spec.replicas (if set);   - zero, otherwise."
                 type: boolean
               extraFiles:
                 description: ExtraFiles points to a ConfigMap where the files are
@@ -2616,6 +2616,44 @@ spec:
                       - containerPort
                       type: object
                     type: array
+                  rollingUpdate:
+                    description: RollingUpdate defines params to control the desired
+                      behavior of rolling update.
+                    properties:
+                      maxSurge:
+                        anyOf:
+                        - type: integer
+                        - type: string
+                        description: 'The maximum number of pods that can be scheduled
+                          above the desired number of pods. Value can be an absolute
+                          number (ex: 5) or a percentage of desired pods (ex: 10%).
+                          This can not be 0 if MaxUnavailable is 0. Absolute number
+                          is calculated from percentage by rounding up. Defaults to
+                          25%. Example: when this is set to 30%, the new ReplicaSet
+                          can be scaled up immediately when the rolling update starts,
+                          such that the total number of old and new pods do not exceed
+                          130% of desired pods. Once old pods have been killed, new
+                          ReplicaSet can be scaled up further, ensuring that total
+                          number of pods running at any time during the update is
+                          at most 130% of desired pods.'
+                        x-kubernetes-int-or-string: true
+                      maxUnavailable:
+                        anyOf:
+                        - type: integer
+                        - type: string
+                        description: 'The maximum number of pods that can be unavailable
+                          during the update. Value can be an absolute number (ex:
+                          5) or a percentage of desired pods (ex: 10%). Absolute number
+                          is calculated from percentage by rounding down. This can
+                          not be 0 if MaxSurge is 0. Defaults to 25%. Example: when
+                          this is set to 30%, the old ReplicaSet can be scaled down
+                          to 70% of desired pods immediately when the rolling update
+                          starts. Once new pods are ready, old ReplicaSet can be scaled
+                          down further, followed by scaling up the new ReplicaSet,
+                          ensuring that the total number of pods available at all
+                          times during the update is at least 70% of desired pods.'
+                        x-kubernetes-int-or-string: true
+                    type: object
                   securityContext:
                     description: SecurityContext configures security attributes for
                       the nginx pod.
