chore(integration): fixing flaky tests \o/

--- a/test/testdata/rpaas-full.yaml
+++ b/test/testdata/rpaas-full.yaml
@@ -10,7 +10,7 @@ kind: RpaasPlan
 metadata:
   name: basic
 spec:
-  image: tsuru/nginx-tsuru:1.16.1
+  image: tsuru/nginx-tsuru:stable-master
   resources:
     limits:
       memory: "128Mi"
