--- a/Dockerfile.operator
+++ b/Dockerfile.operator
@@ -2,10 +2,10 @@ FROM golang:1.16-alpine AS builder
 COPY . /go/src/github.com/tsuru/rpaas-operator
 WORKDIR /go/src/github.com/tsuru/rpaas-operator
 RUN apk add --update gcc git make musl-dev && \
-    make build-operator
+    make build/manager
 
 FROM alpine:3.8
-COPY --from=builder /go/src/github.com/tsuru/rpaas-operator/rpaas-operator /bin/rpaas-operator
+COPY --from=builder /go/src/github.com/tsuru/rpaas-operator/bin/manager /bin/rpaas-operator
 RUN apk update && \
     apk add --no-cache ca-certificates && \
     rm /var/cache/apk/*
