feat(api): support custom Nginx log format + log additional headers

--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -104,6 +104,16 @@ spec:
                     type: string
                   httpsListenOptions:
                     type: string
+                  logAdditionalHeaders:
+                    items:
+                      type: string
+                    type: array
+                  logFormat:
+                    type: string
+                  logFormatEscape:
+                    type: string
+                  logFormatName:
+                    type: string
                   syslogEnabled:
                     type: boolean
                   syslogFacility:
