feat(api): support logging a custom key-value as well

--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -446,6 +446,10 @@ spec:
                             type: string
                           httpsListenOptions:
                             type: string
+                          logAdditionalFields:
+                            additionalProperties:
+                              type: string
+                            type: object
                           logAdditionalHeaders:
                             items:
                               type: string
