--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -104,6 +104,10 @@ spec:
                     type: string
                   httpsListenOptions:
                     type: string
+                  logAdditionalFields:
+                    additionalProperties:
+                      type: string
+                    type: object
                   logAdditionalHeaders:
                     items:
                       type: string
