feat(api): support custom Nginx log format + log additional headers and fields (#120)

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -423,6 +423,20 @@ spec:
                         type: string
                       httpsListenOptions:
                         type: string
+                      logAdditionalFields:
+                        additionalProperties:
+                          type: string
+                        type: object
+                      logAdditionalHeaders:
+                        items:
+                          type: string
+                        type: array
+                      logFormat:
+                        type: string
+                      logFormatEscape:
+                        type: string
+                      logFormatName:
+                        type: string
                       syslogEnabled:
                         type: boolean
                       syslogFacility:
