--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -39,3 +39,8 @@ archives:
 
 checksum:
   name_template: "checksums.txt"
+
+release:
+  prerelease: auto
+  extra_files:
+    - glob: ./manifest.json
