add custom MapHashBucketSize to NginxConfig

--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -118,6 +118,8 @@ spec:
                     type: string
                   logFormatName:
                     type: string
+                  mapHashBucketSize:
+                    type: integer
                   syslogEnabled:
                     type: boolean
                   syslogFacility:
