--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -494,6 +494,8 @@ spec:
                             type: string
                           logFormatName:
                             type: string
+                          mapHashBucketSize:
+                            type: integer
                           syslogEnabled:
                             type: boolean
                           syslogFacility:
