--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -6056,6 +6056,10 @@ spec:
                           Defaults to true.
                         type: boolean
                     type: object
+                  suspend:
+                    description: Suspend flag tells whether controller should suspend
+                      any further modifications on this resource. Defaults to false.
+                    type: boolean
                   tls:
                     description: TLS configuration.
                     items:
