--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -5815,6 +5815,10 @@ spec:
                       true.
                     type: boolean
                 type: object
+              suspend:
+                description: Suspend flag tells whether controller should suspend
+                  any further modifications on this resource. Defaults to false.
+                type: boolean
               tls:
                 description: TLS configuration.
                 items:
