feat(api): add "rpaas" as short name of RpaasInstance resource

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -13,6 +13,8 @@ spec:
     kind: RpaasInstance
     listKind: RpaasInstanceList
     plural: rpaasinstances
+    shortNames:
+    - rpaas
     singular: rpaasinstance
   scope: Namespaced
   versions:
