--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -6057,6 +6057,7 @@ spec:
                         type: boolean
                     type: object
                   suspend:
+                    default: false
                     description: Suspend flag tells whether controller should suspend
                       any further modifications on this resource. Defaults to false.
                     type: boolean
