--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-go@v2
+    - uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: "1.20"
     - run: make test
 
   lint:
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: "1.20"
     - uses: actions/checkout@v2
     - uses: golangci/golangci-lint-action@v3
       with:
@@ -40,9 +40,9 @@ jobs:
       - uses: azure/setup-helm@v1
         with:
           version: v3.7.0
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          go-version: "1.20"
       - uses: actions/cache@v2
         with:
           path: |
@@ -195,9 +195,9 @@ jobs:
           }
         }
         EOF
-    - uses: actions/setup-go@v2
+    - uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: "1.20"
     - uses: goreleaser/goreleaser-action@v1
       with:
         version: latest
