--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
     name: "Publish rpaas-api image on dockerhub"
     needs:
     - test
-    - lint
+    - integration
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
@@ -91,7 +91,7 @@ jobs:
     name: "Publish rpaas-operator image on dockerhub"
     needs:
     - test
-    - lint
+    - integration
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
@@ -125,7 +125,7 @@ jobs:
     name: "Publish rpaas-purger image on dockerhub"
     needs:
     - test
-    - lint
+    - integration
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
@@ -158,7 +158,9 @@ jobs:
   release:
     name: "Release artifacts on github"
     if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/')
-    needs: [test, lint]
+    needs:
+    - test
+    - integration
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
