fix(controller): fixing RBAC perms to manage KEDA resources

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -109,9 +109,11 @@ rules:
   - scaledobjects
   verbs:
   - create
+  - delete
   - get
-  - patch
+  - list
   - update
+  - watch
 - apiGroups:
   - nginx.tsuru.io
   resources:
