add custom MapHashMaxSize to NginxConfig

--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -492,6 +492,8 @@ spec:
                             type: string
                           mapHashBucketSize:
                             type: integer
+                          mapHashMaxSize:
+                            type: integer
                           syslogEnabled:
                             type: boolean
                           syslogFacility:
