--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -473,6 +473,8 @@ spec:
                         type: string
                       mapHashBucketSize:
                         type: integer
+                      mapHashMaxSize:
+                        type: integer
                       syslogEnabled:
                         type: boolean
                       syslogFacility:
