--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -80,6 +80,8 @@ spec:
                     type: string
                   mapHashBucketSize:
                     type: integer
+                  mapHashMaxSize:
+                    type: integer
                   syslogEnabled:
                     type: boolean
                   syslogFacility:
