--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,16 +24,25 @@ archives:
 - id: rpaasv2
   builds:
   - rpaasv2
-  name_template: "rpaasv2_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  name_template: >-
+    "rpaasv2_{{ .Version }}_
+    {{- if eq .Os "darwin" -}}
+      Darwin
+    {{- else if eq .Os "linux" -}}
+      Linux
+    {{- else if eq .Os "windows" -}}
+      Windows
+    {{- else -}}
+      {{ .Os }}
+    {{- end }}_
+    {{- if eq .Arch "amd64" -}}
+      x86_64
+    {{- else -}}
+      {{ .Arch }}
+    {{ end }}
   format_overrides:
   - goos: windows
     format: zip
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
   files:
   - LICENSE
 
