goreleaser: removing newline no default arch

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,7 +40,7 @@ archives:
     {{- else if eq .Arch "386" -}}
       i386
     {{- else -}}
-      {{ .Arch }}
+      {{- .Arch }}
     {{ end }}
   format_overrides:
   - goos: windows
