goreleaser: removing newline no default arch (2)

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,7 +41,7 @@ archives:
       i386
     {{- else -}}
       {{- .Arch }}
-    {{ end }}
+    {{- end }}
   format_overrides:
   - goos: windows
     format: zip
