feat: support redering custom DNS resolvers on Nginx conf

--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -494,6 +494,12 @@ spec:
                             type: integer
                           mapHashMaxSize:
                             type: integer
+                          resolverAddresses:
+                            items:
+                              type: string
+                            type: array
+                          resolverTTL:
+                            type: string
                           syslogEnabled:
                             type: boolean
                           syslogFacility:
