--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -475,6 +475,12 @@ spec:
                         type: integer
                       mapHashMaxSize:
                         type: integer
+                      resolverAddresses:
+                        items:
+                          type: string
+                        type: array
+                      resolverTTL:
+                        type: string
                       syslogEnabled:
                         type: boolean
                       syslogFacility:
