feat(api): back the RpaasInstance's resource age to default printing columns

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -22,6 +22,9 @@ spec:
     - jsonPath: .spec.suspend
       name: Suspended
       type: boolean
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
     name: v1alpha1
     schema:
       openAPIV3Schema:
